# paradex

./: .claude-memory  .gitignore  1  =1.8.0  AGENTS.md  CLAUDE.md  DepthCamera_2026-01-14-15-47-21.json  DepthCamera_2026-01-14-15-47-31.json  DepthCamera_2026-03-30-18-11-01.json  DepthCamera_2026-03-30-18-11-03.json  MUJOCO_LOG.TXT  README.md  ScreenCamera_2026-01-12-17-20-01.json  ScreenCamera_2026-01-12-17-20-09.json  ScreenCamera_2026-01-12-17-20-46.json  ScreenCamera_2026-01-12-17-37-00.json  adsf  asdf  asdf copy.py  asdf.py  asdf0  asdf13  asdf16  asdf2  asdfasdf  attached_container_view.json  consistency_check.json  dex-teleop.code-workspace  environment.nobuild.yml  environment.yml  grid_image.sh  images.txt  index.html  lookup  marker_log_1754581138.json  marker_log_1754589463.json  marker_log_1759069792.json  marker_offset.npy  merge_video.py  my_env.yml  (+31 more)
.claude/: settings.json
.omc/: project-memory.json
.viser_views/: apple_view.json  bamboo_basket_view.json  book_view.json  french_mustard_view.json  green_soap_dispenser_view.json  lotion_view.json  mug_holder_view.json  organizer_beige_view.json  pink_clock_view.json  plastic_elephant_jug_view.json  pringles_view.json  spicemill_view.json
20251128_230402_charuco_boards/: charuco_board_1_parameters.txt
agent_docs/: README.md
allegro_order_debug/: action.npy  (+2 more)
cpp/franka_daemon/: CMakeLists.txt  build_daemon.sh  franka_daemon.cpp  run_daemon.sh  servo_protocol.hpp
rsc/robot/inspire_f1/URDF-2/URDF-2/RH56F1_L/: CMakeLists.txt
rsc/robot/inspire_f1/URDF-2/URDF-2/RH56F1_L/launch/: display.launch  display.launch.py  gazebo.launch
rsc/robot/inspire_f1/URDF-2/URDF-2/RH56F1_L/meshes/: index_tip.STL  left_index_1.STL  left_little_2.STL  left_middle_2.STL  left_ring_2.STL  left_thumb_2.STL  left_thumb_4.STL  plam_1.STL  plam_2.STL  thumb_force_sensor.STL
rsc/robot/inspire_f1/URDF-2/URDF-2/RH56F1_L/meshes_deprecated/: index_tip.STL  left_index_1.STL  left_thumb_3.STL
rsc/robot/inspire_f1/URDF-2/URDF-2/RH56F1_L/参数资料/: RH56F1测量统计.docx
(+2811 files in other folders)
